# jean-claude-stopkran

./: Makefile  README.md  com.stopkran.daemon.plist  pyproject.toml  stopkran.service  stopkran_daemon.py  stopkran_hook.py  stopkran_setup.py
