[project]
name = "stopkran"
version = "0.1.0"
description = "Telegram bot for remote approval of Claude Code permission requests"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=20.0",
]

[project.scripts]
stopkran-daemon = "stopkran_daemon:main_sync"
stopkran-setup = "stopkran_setup:main"
